add max allowed computations (#102)
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>